<resources>
    <string name="app_name">PopularLibrary</string>
    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="btn_default_text">0</string>
    <string name="login">Логин</string>
    <string name="bottom_menu_title_users">GH Users</string>
    <string name="bottom_menu_title_convert">Converter</string>
    <string name="choose_image">Выбрать рисунок</string>
    <string name="convert">Конвертировать в PNG</string>
    <string name="cancel">Отмена</string>
    <string name="need_permission_failed">Нет разрешения</string>
    <string name="need_permission_read_file">Требуется разрешение для чтения файлов</string>
    <string name="grant">Запросить доступ</string>
    <string name="convert_title">Конвертер</string>
    <string name="users_title">GH пользователи</string>
    <string name="permission_failed_to_read_files">Отсутствует разрешение на чтение файлов</string>
    <string name="permission_failed_to_write_files">Отсутствует разрешение на запись файлов</string>
    <string name="need_permission_write_file">Требуется разрешение для чтения файлов</string>
    <string name="repo_name">Название репозитория</string>
    <string name="repo_title">Репозитории:</string>
    <string name="repository_title">Репозитории</string>
    <string name="repo_title_text">Название репозитория:</string>
    <string name="repo_description_text">Описание репозитория:</string>
    <string name="repo_id_text">id:</string>
    <string name="repo_date_text">Дата создания:</string>
    <string name="repo_size_text">Размер:</string>
    <string name="repo_branch_text">Ветка по умолчанию:</string>
    <string name="repo_language_text">Язык:</string>
    <string name="repo_forks_count_text">Количество форков:</string>
</resources>