<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_one"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="21dp" />

    <Button
        android:id="@+id/btn_counter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/tv_1"
        tools:layout_editor_absoluteX="148dp" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_two"
        app:layout_constraintTop_toBottomOf="@id/btn_counter1"
        tools:layout_editor_absoluteX="148dp" />

    <Button
        android:id="@+id/btn_counter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/tv_2"
        tools:layout_editor_absoluteX="148dp" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_three"
        app:layout_constraintTop_toBottomOf="@id/btn_counter2"
        tools:layout_editor_absoluteX="148dp" />

    <Button
        android:id="@+id/btn_counter3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/tv_3"
        tools:layout_editor_absoluteX="148dp" />

</androidx.constraintlayout.widget.ConstraintLayout>